--- a/style.css
+++ b/style.css
@@ -25,3 +25,16 @@ body{
 
 /* header */
 
+header{
+   width: 100%;
+   height: 600px;
+   background: #eacda3;  
+   /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, hsla(34, 53%, 66%, 0.674), hsl(35, 63%, 78%));  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, hsla(34, 53%, 66%, 0.674), hsl(35, 63%, 78%)); 
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-size: cover;
+    background-attachment: fixed;
+
+}
