--- a/style.css
+++ b/style.css
@@ -23,8 +23,9 @@ body{
     margin-bottom: 60px;
 }
 
-/* header */
+body{ background-color: aliceblue;}
 
+/* header */
 header{
    width: 100%;
    height: 600px;
