--- a/quizzes.css
+++ b/quizzes.css
@@ -2,15 +2,17 @@
     width: 70%;
     max-width: 120em;
     background-color: whitesmoke;
+    padding: 2em;
+    @include neo( 1, 1em, 1em)
 
 }
 .carrrousel .grande{
-    width: 200%;
-    background-color: white;   
+    width: 200%;  
     display: flex;
     flex-flow: row-nowrap;
     justify-content: flex-start;
     align-items: center;
+    @include neo( 1, 1em, 1em);
 }
 .carrrousel .img{
     width: calc(100%/2);
