--- a/style.css
+++ b/style.css
@@ -1,150 +1,406 @@
-.title{
-    color: #ffbd59 #ff914d;
-    font-size: 30px;
-    text-align: center;
-    margin-bottom: 60px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Poppins:wght@400;500;600;700;800&display=swap');
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body{
-    font-family: 'concert one';
-}
-
-.container{
-    padding: 60px 0;
-    width: 100%;
-    max-width: 1000px;
-    margin: auto;
-    overflow: hidden;
-}
-
-/* header */
-
-header{
-   width: 100%;
-   height: 600px;
-   background: #eacda3;  
-   /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, hsla(34, 53%, 66%, 0.674), hsl(35, 63%, 78%));  
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, hsla(34, 53%, 66%, 0.674), hsl(35, 63%, 78%));
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background-size: cover;
-    background-attachment: fixed;
-    position: relative;
-}
-
-nav{
-    text-align: center;
-    padding: 30px 50px 0 0;
-}
-
-nav > a{
-    color:#fff;
-    font-weight: 300;
     text-decoration: none;
-    margin-right: 10px;
+    list-style: none;
 }
 
-nav > a:hover{
-    text-decoration: underline;
+body {
+    font-family: 'Poppins', sans-serif;
 }
 
-header .texts-header{
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.header {
+    background-color: #FFF8F1;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 70vh;
     display: flex;
-    height: 450px;
-    width: 100%;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
 }
 
-.texts-header h1{
-    font-size: 100px;
-    color: #ffbd59;
-}
-
-.texts-header h2{
-    font-size: 70px;
-    font-weight: 300;
-    color: #ff914d;
-}
-
-.wave{
-    position:absolute;
-    bottom: 0;
-    width: 100%;
-}
-
- /* About us */
-
- .container-about-us{
+.menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
     display: flex;
-    justify-content: space-evenly;
+    align-items: center;
+    justify-content: space-between;
 }
 
- .imagen-about-us{
-    width: 48%;
+.logo {
+    color: #000000;
+    font-size: 25px;
+    font-weight: 800;
 }
 
- .about-us .content-textos{
-    width: 48%;
+.menu .navbar ul li {
+    position: relative;
+    float: left;
 }
 
- .content-textos h3{
+.menu .navbar ul li a {
+    font-size: 16px;
+    padding: 20px;
+    color: #000000;
+    display: block;
+    font-weight: 600;
+}
+
+.menu .navbar ul li a:hover{
+    color: #CE967B;
+}
+
+#menu {
+    display: none;
+}
+
+.menu-icon {
+    width: 25px;
+}
+
+.menu labol {
+    cursor: pointer;
+    display: none;
+}
+
+.header-content {
+    text-align: center; 
+}
+
+.header-content h1 {
+    font-size: 75px;
+    line-height: 80px;
+    color: #FFBD59;
+    margin-bottom: 5px;
+}
+.header-content h2 {
+    font-size: 75px;
+    line-height: 40px;
+    color: #FF914D;
+    margin-bottom: 35px;
+}
+
+.header-content p {
+    font-size: 16px;
+    color: #000000;
+    padding: 0 250px;
+    margin-bottom: 25px;
+}
+
+.btn-1 {
+    display: inline-block;
+    padding: 11px 35px;
+    background-color: #FF914D;
+    color: #000000;
+    border-radius: 100px;
+}
+
+.btn-1:hover {
+    background-color: #e66210;
+}
+/* Aquì empieza "courses" */
+.courses {
+    padding: 100px 0;
+    background-color: #F6F4F3;
+    position: relative; 
+}
+
+.courses-content {
+    text-align: center;  
+}
+
+.courses-content h2 {
+    font-size: 55px;
+    line-height: 70px;
+    color:#000000;
+    padding: 0 250px;
     margin-bottom: 15px;
 }
 
- .content-texts h3 span{
-    background: #ffffff00;
-    color: #ffffff00;
-    border-radius: 100%;
-    display: inline-block;
-    text-align: center;
-    width: 1px;
-    height: 1px;
-    padding: 1px;
-    box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
-    margin-right: 5px;
+.txt-p {
+    font-size: 16px;
+    color: #000000;
+    padding: 0 250px;
+    margin-bottom: 35px;
 }
 
-.content-texts p{
-    padding: 0px 0px 30px 15px;
-    font-weight: 300;
-    text-align: justify;
-}
-
-/* Galery */
-
-.courses{
-    background: #f2f2f2;
-}
-
-.galery-cour{
+.courses-group {
     display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 50px;
 }
 
-.image-cour{
-    width: 24px;
-    margin-bottom: 10px;
+.courses-1 {
+    padding: 0 25px;
 }
 
-.image-cour > img{
-    width: 1000%;
-    height: 100%;
-    object-fit: cover;
+.courses-1 img {
+    width: 200px;
+    height: 125px;
+    border-radius: 40px;
+}
+
+.courses-1 h3 {
+    font-size: 16px;
+    margin-bottom: 15px;
+}
+/* Aqui empiezan "quizzes" */
+.quizzes {
+    background-color:#CFC5D3 ;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    padding: 100px 0;
+}
+
+.quizzes-content {
+    text-align: center;
+}
+
+.quizzes-content h2 {
+    font-size: 55px;
+    line-height: 70px;
+    margin-bottom: 50px;
+}
+
+.quizzes-content p {
+    font-size: 16px;
+    color: #000000;
+    margin-bottom: 50px;
+    padding: 0 100px;
+}
+
+.quizzes-group {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
+}
+
+.quizzes-1 {
+    padding: 0 100px;
+}
+
+.quizzes-1 img {
+    width: 100px;
+    margin-bottom: 5px;
+}
+
+.quizzes-1 h3 {
+    font-size: 18px;
+}
+
+.videos {
+    display: flex;
+}
+
+.videos-1 {
+    width: 50%;
+    padding: 100px 250px 100px 100px;
+    background-color: #FFF8F1;
+}
+
+.videos-2 {
+    background-image: url(img/RESCUED_FOOD-removebg-preview.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 50%;
+}
+.videos-3 {
+    background-image: url(img/RESCUED_FOOD-removebg-preview.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 50%;
+}
+
+h2 {
+    font-size: 55px;
+    line-height: 70px;
+    color: #000000;
+    margin-bottom: 20px;
+}
+
+p {
+    font-size: 16px;
+    color:#000000;
+    margin: 25px 0 45px 0;
+}
+/* Aqui empieza "guide" */
+.guide {
+    padding: 100px 0;
+    text-align: center;
+}
+
+.guide-content {
+    display: flex;
+    justify-content: space-between;
+}
+
+.guide-1 {
+    padding: 15px 55px;
+}
+
+.guide-1 img {
+    width: 150px;
+    border-radius: 40px;
+    margin-bottom: 15px;
+}
+
+.guide-1 h3 {
+    font-size: 25px;
+    color: #000000;
+}
+/* Aqui empieza "footer" */
+.footer {
+    padding: 100px 0;
+    background-color: #000000;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+}
+
+link h3 {
+    font-size: 18px;
+    color: #F6F4F3;
+    margin-bottom: 15px;
+}
+
+.link a {
+    font-size: 16px;
+    color: #F6F4F3;
     display: block;
+    margin-bottom: 15px;
 }
-nav{ margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "QuickSand";
+
+@media(max-width:991px) {
+
+    .menu {
+        padding: 30px;
+    }
+
+    .menu label {
+        display: initial;
+    }
+
+    .menu .navbar {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background-color: #0dff00;
+        display: none;
+    }
+
+    .menu .navbar ul li {
+        width: 100%;
+    }
+
+    #menu:checked ~ .navbar {
+        display: initial;
+    }
+
+    .header {
+        min-height: 0vh;
+    }
+
+    .header-content {
+        padding: 100px 30px;
+    }
+
+    .header-content p {
+        padding: 0;
+    }
+
+    .courses {
+        padding: 30px;
+        text-align: center;
+    }
+
+    .courses-content {
+        padding: 0;
+        text-align: center;
+    }
+
+    .txt-p {
+        padding: 0;
+        text-align: center;
+    }
+
+    .courses-group {
+        flex-direction: column;
+        margin-bottom: 0;
+        text-align: center;
+    }
+
+    .courses-img {
+        display: none;
+        text-align: center;
+    }
+
+    .quizzes {
+        padding: 30px;
+    }
+
+    .quizzes-content p {
+        padding: 0;
+    }
+
+    .quizzes-group {
+        flex-direction: column;
+        margin-bottom: 0;
+    }
+
+    .quizzes-1 {
+        margin-bottom: 25px;
+    }
+
+    .videos {
+        flex-direction: column;
+    }
+
+    .videos-1 {
+        width: 100%;
+        padding: 30px;
+        text-align: center;
+    }
+
+    .videos-2, .videos-3 {
+        display: none;
+    }
+
+    .guide {
+        padding: 30px;
+    }
+
+    .guide-content {
+        flex-direction: column;
+    }
+
+    .guide-1 {
+        padding: 0;
+    }
+
+    .footer {
+        padding: 30px;
+    }
+
+    .footer-content{
+        flex-direction: column;
+        text-align: center;
+    }
+
 }
