--- a/style.css
+++ b/style.css
@@ -1,406 +1,632 @@
-@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Poppins:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;700&display=swap');
+
+:root{
+    --main-color: #f5a316;
+    --black: #13131a;
+    --bg: #010103;
+    --border:.1rem solid rgba(255,255,255,.3);
+}
 
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
-}
-
-body {
     font-family: 'Poppins', sans-serif;
+    margin: 0; padding: 0;
+    box-sizing: border-box;
+    outline: none; border: none;
+    text-decoration: none;
+    text-transform: capitalize;
+    transition: .2s linear;
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
+html{
+    font-size: 62.5%;
+    overflow-x: hidden;
+    scroll-padding-top: 9rem;
+    scroll-behavior: smooth;
 }
 
-.header {
-    background-color: #FFF8F1;
-    background-position: center bottom;
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 70vh;
-    display: flex;
-    align-items: center;
+html::-webkit-scrollbar{
+    width: .8rem;
 }
 
-.menu {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+html::-webkit-scrollbar-track{
+    background: transparent;
 }
 
-.logo {
-    color: #000000;
-    font-size: 25px;
-    font-weight: 800;
+html::-webkit-scrollbar-thumb{
+    background: #fff;
+    border-radius: 5rem;
 }
 
-.menu .navbar ul li {
-    position: relative;
-    float: left;
+body{
+    background: var(--bg);
 }
 
-.menu .navbar ul li a {
-    font-size: 16px;
-    padding: 20px;
-    color: #000000;
-    display: block;
-    font-weight: 600;
+section{
+    padding: 2rem 7%;
 }
 
-.menu .navbar ul li a:hover{
-    color: #CE967B;
+.heading{
+    text-align: center;
+    color:#fff;
+    text-transform: uppercase;
+    padding-bottom: 3.5rem;
+    font-size: 4rem;
 }
 
-#menu {
-    display: none;
+.heading span{
+    color:var(--main-color);
+    text-transform: uppercase;
 }
 
-.menu-icon {
-    width: 25px;
-}
-
-.menu labol {
-    cursor: pointer;
-    display: none;
-}
-
-.header-content {
-    text-align: center; 
-}
-
-.header-content h1 {
-    font-size: 75px;
-    line-height: 80px;
-    color: #FFBD59;
-    margin-bottom: 5px;
-}
-.header-content h2 {
-    font-size: 75px;
-    line-height: 40px;
-    color: #FF914D;
-    margin-bottom: 35px;
-}
-
-.header-content p {
-    font-size: 16px;
-    color: #000000;
-    padding: 0 250px;
-    margin-bottom: 25px;
-}
-
-.btn-1 {
+.btn{
+    margin-top: 1rem;
     display: inline-block;
-    padding: 11px 35px;
-    background-color: #FF914D;
-    color: #000000;
-    border-radius: 100px;
+    padding: .9rem 3rem;
+    font-size: 1.7rem;
+    color: #fff;
+    background: var(--main-color);
+    cursor: pointer;
 }
 
-.btn-1:hover {
-    background-color: #e66210;
-}
-/* Aquì empieza "courses" */
-.courses {
-    padding: 100px 0;
-    background-color: #F6F4F3;
-    position: relative; 
+.btn:hover{
+    letter-spacing: .2rem;
 }
 
-.courses-content {
-    text-align: center;  
-}
-
-.courses-content h2 {
-    font-size: 55px;
-    line-height: 70px;
-    color:#000000;
-    padding: 0 250px;
-    margin-bottom: 15px;
-}
-
-.txt-p {
-    font-size: 16px;
-    color: #000000;
-    padding: 0 250px;
-    margin-bottom: 35px;
-}
-
-.courses-group {
+.header{
+    background: var(--bg);
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    margin-bottom: 50px;
+    padding: 1.5rem 7%;
+    border-bottom: var(--border);
+    position: fixed;
+    top: 0; left: 0; right: 0;
+    z-index: 1000;
 }
 
-.courses-1 {
-    padding: 0 25px;
+.header .logo img{
+    height: 6rem;
 }
 
-.courses-1 img {
-    width: 200px;
-    height: 125px;
-    border-radius: 40px;
+.header .navbar a{
+    margin: 0 1rem;
+    font-size: 1.6rem;
+    color: #fff;
 }
 
-.courses-1 h3 {
-    font-size: 16px;
-    margin-bottom: 15px;
-}
-/* Aqui empiezan "quizzes" */
-.quizzes {
-    background-color:#CFC5D3 ;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    padding: 100px 0;
+.header .navbar a:hover{
+    color: var(--main-color);
+    border-bottom: .1rem solid var(--main-color);
+    padding-bottom: .5rem;
 }
 
-.quizzes-content {
+.header .icons div{
+    color: #fff;
+    cursor: pointer;
+    font-size: 2.5rem;
+    margin-left: 2rem;
+}
+
+.header .icons div:hover{
+    color: var(--main-color);
+}
+
+#menu-btn{
+    display: none;
+}
+
+.header .search-form{
+    position: absolute;
+    top: 115%; right: 7%;
+    background: #fff;
+    width: 50rem;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    transform: scaleY(0);
+    transform-origin: top;
+}
+
+.header .search-form.active{
+    transform:scaleY(1) ;
+}
+
+.header .search-form input{
+    height: 100%;
+    width: 100%;
+    font-size: 1.6rem;
+    color: var(--black);
+    padding: 1rem;
+    text-decoration: none;    
+}
+
+.header .search-form label{
+    cursor: pointer;
+    font-size: 2.2rem;
+    margin-right: 1.5rem;
+    color: var(--black);
+}
+
+.header .search-form label:hover{
+    color:var(--main-color);
+}
+
+.header .guides-vip-container{
+    position: absolute;
+    top: 100%; right: -100%;
+    height: calc(100vh - 9.5rem);
+    width: 35rem;
+    background: #fff;
+    padding: 0 1.5rem;
+}
+
+.header .guides-vip-container.active{
+    right: 0;
+}
+
+.header .guides-vip-container .guides-vip{
+    position: relative;
+    margin: 2rem 0;
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+.header .guides-vip-container .guides-vip .fa-times{
+    position: absolute;
+    top: 1rem; right: 1rem;
+    font-size: 2rem;
+    cursor: pointer;
+    color: var(--black);
+}
+
+.header .guides-vip-container .guides-vip .fa-times:hover{
+    color: var(--main-color);
+}
+
+.header .guides-vip-container .guides-vip img{
+    height: 7rem;
+}
+
+.header .guides-vip-container .guides-vip h3{
+    font-size: 2rem;
+    color: var(--black);
+    padding-bottom: .5rem;
+}
+
+.header .guides-vip-container .guides-vip .price{
+    font-size: 1rem;
+    color: var(--main-color);
+}
+
+.header .guides-vip-container .btn{
+    width: 100%;
     text-align: center;
 }
 
-.quizzes-content h2 {
-    font-size: 55px;
-    line-height: 70px;
-    margin-bottom: 50px;
-}
-
-.quizzes-content p {
-    font-size: 16px;
-    color: #000000;
-    margin-bottom: 50px;
-    padding: 0 100px;
-}
-
-.quizzes-group {
+.home{
+    min-height: 100vh;
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 50px;
+    align-items: center;
+    background: url(../img/Fondo\ 3.0.png) no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
-.quizzes-1 {
-    padding: 0 100px;
+.home .content{
+    max-width: 60rem;
 }
 
-.quizzes-1 img {
-    width: 100px;
-    margin-bottom: 5px;
+.home .content h3{
+    font-size: 6rem;
+    text-transform: uppercase;
+    color: #FFBD59;
 }
 
-.quizzes-1 h3 {
-    font-size: 18px;
+.home .content h4{
+    font-size: 6rem;
+    text-transform: uppercase;
+    color: #FF914D;
 }
 
-.videos {
+.home .content p{
+    font-size: 2rem;
+    font-weight: lighter;
+    line-height: 1.8;
+    padding: 1rem 0;
+    color: #eee;
+    text-align: justify;
+}
+
+.about .row{
     display: flex;
+    align-items: center;
+    background: var(--black);
+    flex-wrap: wrap;
 }
 
-.videos-1 {
-    width: 50%;
-    padding: 100px 250px 100px 100px;
-    background-color: #FFF8F1;
+.about .row .image{
+    flex: 1 1 45rem;
 }
 
-.videos-2 {
-    background-image: url(img/RESCUED_FOOD-removebg-preview.png);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 50%;
-}
-.videos-3 {
-    background-image: url(img/RESCUED_FOOD-removebg-preview.png);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 50%;
+.about .row .img{
+    width: 100%;
 }
 
-h2 {
-    font-size: 55px;
-    line-height: 70px;
-    color: #000000;
-    margin-bottom: 20px;
+.about .row .content{
+    flex: 1 1 45rem;
+    padding: 2rem;
 }
 
-p {
-    font-size: 16px;
-    color:#000000;
-    margin: 25px 0 45px 0;
+.about .row .content h3{
+    font-size: 4rem;
+    color: #fff;
 }
-/* Aqui empieza "guide" */
-.guide {
-    padding: 100px 0;
+
+.about .row .content h4{
+    font-size: 2rem;
+    color: #fff;
+}
+
+.about .row .content p{
+    font-size: 1.6rem;
+    color: #ccc;
+    padding: 1rem 0;
+    line-height: 1.8;
+    text-align: justify;
+}
+
+.videos .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap:1.5rem;
+}
+
+.videos .box-container .box{
+    padding: 5rem;
+    text-align: center;
+    border: var(--border);
+}
+
+.videos .box-container .box img{
+    height: 10rem;
+}
+
+.videos .box-container .box h3{
+    color: #fff;
+    font-size: 2rem;
+    padding: 1rem 0;
+}
+
+.videos .box-container .box .recommended{
+    color: #fff;
+    font-size: 2rem;
+    padding: 5rem 0;
+}
+
+.videos .box-container .box:hover{
+    background:#fff;
+}
+
+.videos .box-container .box:hover > *{
+    color:var(--black);
+}
+
+.quizzes .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 1.5rem;  
+}
+
+.quizzes .box-container .box{
+    text-align: center;
+    border: var(--border);
+    padding: 2rem;
+}
+
+.quizzes .box-container .box .icons a{
+    height: 5rem;
+    width: 5rem;
+    line-height: 5rem;
+    font-size: 2rem;
+    border: var(--border);
+    color:#fff;
+    margin: .3rem;
+}
+
+.quizzes .box-container .box .icons a:hover{
+    background: var(--main-color);
+}
+
+.quizzes .box-container .box .image{
+    padding: 2.5rem 0;
+}
+
+.quizzes .box-container .box .image img{
+    height: 25rem;
+}
+
+.quizzes .box-container .box .content h3{
+    color:#fff;
+    font-size: 2.5rem;
+}
+
+.quizzes .box-container .box .content .stars{
+    padding: 1.5rem;
+}
+
+.quizzes .box-container .box .content .stars i{
+    font-size: 1.7rem;
+    color: var(--main-color);
+}
+
+.quizzes .box-container .box .content .recommended{
+    color: #fff;
+    font-size: 2.5rem;
+}
+
+.quizzes .box-container .box .content .recommended span{
+    text-decoration: line-through;
+    font-weight: lighter;
+    font-size: 1.5rem;
+}
+
+.quizzes .box-container .box:hover{
+    background: #fff;
+}
+
+.review .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 1.5rem;  
+}
+
+.review .box-container .box{
+    border:var(--border);
+    text-align: center;
+    padding: 3rem 2rem;
+}
+
+.review .box-container .box p{
+    font-size: 1.6rem;
+    line-height: 1.8;
+    color: #ccc;
+    padding: 2rem 0;
+}
+
+.review .box-container .box .user{
+    height: 7rem;
+    width: 7rem;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.review .box-container .box h3{
+    padding: 1rem 0;
+    font-size: 2rem;
+    color: #fff;
+}
+
+.review .box-container .box .stars{
+    padding: 1.5rem ;
+    font-size: 2rem;
+    color:var(--main-color);
+}
+
+.contact .row{
+    display: flex;
+    background: var(--black);
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.contact .row .map{
+    flex: 1 1 45rem;
+    width: 100%;
+    object-fit: cover;
+}
+
+.contact .row form{
+    flex: 1 1 45rem;
+    padding: 5rem 2rem;
     text-align: center;
 }
 
-.guide-content {
+.contact .row form h3{
+    text-transform: uppercase;
+    font-size: 3.5rem;
+    color: #fff;
+}
+
+.contact .row form .inputBox{
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    background: var(--bg);
+    border: var(--border);
 }
 
-.guide-1 {
-    padding: 15px 55px;
+.contact .row form .inputBox span{
+    color:#fff;
+    font-size: 2rem;
+    padding-left: 2rem;
 }
 
-.guide-1 img {
-    width: 150px;
-    border-radius: 40px;
-    margin-bottom: 15px;
+.contact .row form .inputBox input{
+    width: 100%;
+    padding: 2rem;
+    font-size: 1.7rem;
+    color: #fff;
+    text-transform: none;
+    background: none;
 }
 
-.guide-1 h3 {
-    font-size: 25px;
-    color: #000000;
-}
-/* Aqui empieza "footer" */
-.footer {
-    padding: 100px 0;
-    background-color: #000000;
+.guides .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 1.5rem;  
 }
 
-.footer-content {
-    display: flex;
-    justify-content: space-between;
+.guides .box-container .box{
+    border:var(--border)
 }
 
-link h3 {
-    font-size: 18px;
-    color: #F6F4F3;
-    margin-bottom: 15px;
+.guides .box-container .box .image{
+    height: 25rem;
+    overflow: hidden;
+    width: 100%;
 }
 
-.link a {
-    font-size: 16px;
-    color: #F6F4F3;
+.guides .box-container .box img{
+    height: 100%;
+    object-fit: cover;
+    width: 100%;
+}
+
+.guides .box-container .box:hover .image img{
+    transform: scale(1.2);
+}
+
+.guides .box-container .box .content{
+    padding: 2rem;
+}
+    
+.guides .box-container .box .content .title{
+    font-size: 2.5rem;
+    line-height: 1.5;
+    color: #fff;
+}
+
+.guides .box-container .box .content .title:hover{
+    color:var(--main-color)
+}
+
+.guides .box-container .box .content span{
+    color: var(--main-color);
     display: block;
-    margin-bottom: 15px;
+    padding-top: 1rem;
+    font-size: 2rem;
 }
 
-@media(max-width:991px) {
+.guides .box-container .box .content p{
+    font-size: 1.6rem;
+    line-height: 1.8;
+    color: #ccc;
+    padding: 1rem 0;
+}
 
-    .menu {
-        padding: 30px;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* media queries */
+@media (max-width:991px){
+
+    html{
+        font-size: 55%;
     }
 
-    .menu label {
-        display: initial;
+    .header{
+        padding: 1.5rem 2rem;
     }
 
-    .menu .navbar {
+    section{
+        padding: 2rem;
+    }
+
+}
+
+@media (max-width:768px){
+
+    #menu-btn{
+        display: inline-block;
+    }
+
+    .header .navbar{
         position: absolute;
-        top: 100%;
-        left: 0;
+        top:100%; right: -100%;
+        background: #fff;
+        width: 30rem;
+        height: calc(100vh -9,5rem);
+    }
+
+    .header .navbar.active{
         right: 0;
-        background-color: #0dff00;
-        display: none;
     }
 
-    .menu .navbar ul li {
-        width: 100%;
+    .header .navbar a{
+        color: var(--black);
+        display: block;
+        margin: 1.5rem;
+        padding: .5rem;
+        font-size: 2rem;
     }
 
-    #menu:checked ~ .navbar {
-        display: initial;
+    .header .search-form{
+        width: 90%;
+        right:2rem;
     }
 
-    .header {
-        min-height: 0vh;
-    }
-
-    .header-content {
-        padding: 100px 30px;
-    }
-
-    .header-content p {
-        padding: 0;
-    }
-
-    .courses {
-        padding: 30px;
+    .home{
+        background-position: left;
+        justify-content: center;
         text-align: center;
     }
 
-    .courses-content {
-        padding: 0;
-        text-align: center;
+    .home .content h3{
+        font-size: 4.5rem;
     }
 
-    .txt-p {
-        padding: 0;
-        text-align: center;
+    .home .content h4{
+        font-size: 4.5rem;
     }
 
-    .courses-group {
-        flex-direction: column;
-        margin-bottom: 0;
-        text-align: center;
+    .home .content p{
+        font-size: 1.5rem;
     }
 
-    .courses-img {
-        display: none;
-        text-align: center;
-    }
+}
 
-    .quizzes {
-        padding: 30px;
-    }
+@media (max-width:450px){
 
-    .quizzes-content p {
-        padding: 0;
-    }
-
-    .quizzes-group {
-        flex-direction: column;
-        margin-bottom: 0;
-    }
-
-    .quizzes-1 {
-        margin-bottom: 25px;
-    }
-
-    .videos {
-        flex-direction: column;
-    }
-
-    .videos-1 {
-        width: 100%;
-        padding: 30px;
-        text-align: center;
-    }
-
-    .videos-2, .videos-3 {
-        display: none;
-    }
-
-    .guide {
-        padding: 30px;
-    }
-
-    .guide-content {
-        flex-direction: column;
-    }
-
-    .guide-1 {
-        padding: 0;
-    }
-
-    .footer {
-        padding: 30px;
-    }
-
-    .footer-content{
-        flex-direction: column;
-        text-align: center;
+    html{
+        font-size: 50%;
     }
 
 }
