--- a/style.css
+++ b/style.css
@@ -506,7 +506,7 @@ section{
     color: var(--main-color);
     display: block;
     padding-top: 1rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .guides .box-container .box .content p{
@@ -516,44 +516,60 @@ section{
     padding: 1rem 0;
 }
 
+.footer{
+    background: var(--black);
+    text-align: center;
+}
 
+.footer .share{
+    padding: 1rem 0;
+}
 
+.footer .share a{
+    height: 5rem;
+    width: 5rem;
+    line-height: 5rem;
+    font-size: 2rem;
+    color:#fff;
+    border: var(--border);
+    margin: .3rem;
+    border-radius: 50%;
+}
 
+.footer .share a:hover{
+    color: var(--main-color);
+}
 
+.footer .links{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+    gap: 1rem;
+}
 
+.footer .links a{
+    padding: .7rem 2rem;
+    color:#fff;
+    border: var(--border);
+    font-size: 2rem;
+}
 
+.footer .links a:hover{
+    background:var(--main-color);
 
+}
 
+.footer .credit{
+    font-size: 2rem;
+    color: #fff;
+    font-weight: lighter;
+    padding: 1.5rem;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.footer .credit span{
+    color: var(--main-color);
+}
 
 /* media queries */
 @media (max-width:991px){
