--- a/website.css
+++ b/website.css
@@ -1083,7 +1083,7 @@ h6 {
     color: #f7ab15;
 }
 
-.linea-1 {
+.line-1 {
     margin-top: 2rem;
     margin-right: 7rem;
     margin-left: 7rem;
@@ -1140,7 +1140,7 @@ h6 {
     color: #f7ab15;
 }
 
-.linea-2 {
+.line-2 {
     margin-top: 2rem;
     margin-right: 7rem;
     margin-left: 7rem;
@@ -1293,13 +1293,13 @@ h6 {
         font-size: 10px;
     }
 
-    .linea-1 {
+    .line-1 {
         margin-top: 2rem;
         margin-right: 5rem;
         margin-left: 5rem;
     }
 
-    .linea-2 {
+    .line-2 {
         margin-top: 10px;
         margin-right: 5rem;
         margin-left: 5rem;
