--- a/courses.css
+++ b/courses.css
@@ -270,7 +270,6 @@ img {
     transform: translateX(.25rem);
 }
 
-<<<<<<< Updated upstream
 .card:nth-child(1) .course-tag {
     background-color: #f7ab15;
 }
@@ -319,8 +318,6 @@ img {
     color: #f021b2;
 }
 
-=======
->>>>>>> Stashed changes
 /* COURSES */
 .courses-container {
     min-height: 100vh;
@@ -417,11 +414,7 @@ img {
     color: #f7ab15;
 }
 
-<<<<<<< Updated upstream
 .course-title {
-=======
-.course-title{
->>>>>>> Stashed changes
     font-weight: var(--font-medium);
     font-size: var(--h3-font-size);
     margin-bottom: 1rem;
@@ -430,16 +423,17 @@ img {
     transition: .4s;
 }
 
-<<<<<<< Updated upstream
-.course-title:hover {
-=======
 .course-title a {
-    color: #fff;
+    font-weight: var(--font-medium);
+    font-size: var(--h3-font-size);
+    margin-bottom: 1rem;
+    line-height: 1.2;
+    cursor: pointer;
     transition: .4s;
+    color: #fff;
 }
 
 .course-title a:hover {
->>>>>>> Stashed changes
     color: var(--first-color);
 }
 
@@ -491,11 +485,7 @@ img {
     text-decoration: line-through;
 }
 
-<<<<<<< Updated upstream
-.course-button {
-=======
-.course-button a {
->>>>>>> Stashed changes
+.course-button{
     color: var(--title-color);
     font-size: var(--normal-font-size);
     display: inline-flex;
@@ -505,7 +495,17 @@ img {
     cursor: pointer;
 }
 
-.course-button-icon {
+.course-button a {
+    color: var(--title-color);
+    font-size: var(--normal-font-size);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: .2rem;
+    cursor: pointer;
+}
+
+.course-button-icon{
     font-size: 1.25rem;
     transition: .4s;
 }
