Actualización de HEAD

--- a/CSS/courses.css
+++ b/CSS/courses.css
@@ -128,7 +128,7 @@ img {
 
 .page-title-area {
     min-height: 450px;
-    background-image: url(img/B\ \(1\).png);
+    background-image: url(../img/B\ \(1\).png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
